<resources>
    <string name="app_name">TMFL</string>
    <string name="apply_loan">Apply Loan</string>
    <string name="schemes">Offers</string>
    <string name="refer_friend">Refer\nFriend</string>
    <string name="loan_status">Loan\nStatus</string>
    <string name="txt_login">Login</string>
    <string name="txt_change_pass">Change Password</string>
    <string name="Emipattern">EMI Pattern</string>
    <string name="rc_update">RC Update</string>
    <string name="preclosure_statement">Pre-Closure Statement</string>
    <string name="statement_of_account">Statement Of Account</string>
    <string name="bd_browser_key">87289127-805f-4c46-9af5-cf07557aa3fe</string>

    <string name="contact_us">Contact Us</string>
    <string name="btn_change_pass">Change Password</string>
    <string name="title_activity_schemes">SchemesActivity</string>
    <string name="txt_login_title">mCONNECT \n TMFL Customer zone !!!</string>
    <string name="txt_change_pass_header">To change your password please fill out the fields below.</string>
    <string name="navigation_view_items">Navigation View Item</string>
    <string name="title_welcome">Welcome to </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_rc_upload_image">Upload RC Image</string>
    <string name="txt_forgot_pass_header">Forgot Your Password ?</string>
    <string name="btn_submit">Submit</string>
    <string name="txt_forgot_pass_desc">Enter your User Id and we Will Send you link to reset your password.</string>
    <string name="txt_branch_locator">Branch Locator</string>
    <string name="txt_remember_pass">Remember Password</string>
    <string name="txt_forgot_pass">Forgot Password?</string>
    <string name="txt_forgot">Forgot Password</string>
    <string name="txt_user_id">User Id</string>
    <string name="txt_offers">OFFERS</string>
    <string name="txt_lead_type">LEAD TYPE</string>
    <string name="txt_individual">Individual</string>
    <string name="txt_organizational">Organization</string>
    <string name="txt_overdue">Overdue :</string>
    <string name="txt_overdue_amt">Overdue\nAmt:</string>
    <string name="txt_vehicle_type">VEHICLE TYPE</string>
    <string name="txt_commercial">Commercial</string>
    <string name="txt_passenger">Passenger</string>
    <string name="txt_Refinance">Refinance</string>
    <string name="txt_old_password">Old Password</string>
    <string name="txt_new_password">New Password</string>
    <string name="txt_confirm_password">Confirm Password</string>
    <string name="txt_hint_username">Username</string>
    <string name="txt_hint_password">Password</string>
    <string name="txt_remember_password">Remember Password</string>
    <string name="txt_forgot_password">Forgot Password?</string>
    <string name="txt_basic_details">Basic Details</string>
    <string name="txt_finance_details">Financial Details</string>
    <string name="txt_select_date">Select Date</string>
    <string name="txt_submit">Submit</string>
    <string name="txt_total">Total</string>
    <string name="txt_terminated">Terminated</string>
    <string name="txt_live">Live</string>
    <string name="txt_due_date">Due Date :</string>
    <string name="txt_next_due_date">Next \nDue Date :</string>
    <string name="txt_emi_amount">EMI Amount :</string>
    <string name="txt_repayment_mode">Repayment Mode :</string>
    <string name="hint_txt_rc_number">*Enter RC Number</string>
    <string name="txt_amount_financed">Amount Financed</string>
    <string name="txt_finance_charges">Finance Charges</string>
    <string name="txt_insurance_provision">Insurance Provision</string>
    <string name="txt_option_money">Option Money</string>
    <string name="txt_receipt_no_header">Receipt No.</string>
    <string name="txt_receipt_date_header">Receipt Date</string>
    <string name="txt_receipt_instr_mode_header">Instrument Mode (give description as cash / cheque etc)</string>
    <string name="txt_receipt_instr_no_header">Instrument No.</string>
    <string name="txt_receipt_bank_header">Bank</string>
    <string name="txt_receipt_total_amount">Receipt Amount (Total of breakup)</string>
    <string name="txt_receipt_detail_type">Type (with details as we get in pdf file)</string>
    <string name="txt_receipt_amount_detail">Amount</string>
    <string name="txt_total_receivable">Total Receivable</string>
    <string name="txt_amount_credit_upto">Amount Credited upto </string>
    <string name="txt_amount_credited_from">Amount Credited from </string>
    <string name="txt_total_credit_upto">Total Credit upto </string>
    <string name="txt_balance_payable_amount_contract">Balance Payable on Contract</string>
    <string name="txt_principal_for_the_period">Principal for the period</string>
    <string name="txt_finance_charges_for_the_period">Finance Charges for the period</string>
    <string name="txt_total_bal">\"TOTAL BALANCE\" amount shown above is \"subject to providing clearance proof of all prior Receipts\" \n * The \"TOTAL BALANCE\" will change if not paid on </string>

    <string name="call_script">You can track status of your Query.\nRequest or Complain with this reference number.\nPlease quote this in case you are speaking to our\ncustomer care center executive. For any\nassitance on registration or status or your\ncase, please call our Customer care center\n1800-209-0188 (Toll Free).</string>
    <string name="onlinePayment">Online\nPayment</string>
</resources>
