<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_forgot_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/login_bg"
    tools:context="com.tfml.activity.ForgotPasswordActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:popupTheme="@style/AppTheme.PopupOverlay">
        <ImageView
            android:id="@+id/img_forgot_pass_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:src="@drawable/ic_back_arrow"/>
    </android.support.v7.widget.Toolbar>
    <View
        android:layout_width="wrap_content"
        android:layout_height="0.5dp"
        android:background="@color/white"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:text="@string/txt_forgot_pass_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:id="@+id/txt_change_pass_title" />
        <TextView
            android:text="@string/txt_forgot_pass_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:id="@+id/txt_change_pass_desc" />
        <EditText
            android:layout_marginTop="20dp"
            android:id="@+id/txt_user_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:padding="10dp"
            android:maxLines="1"
            android:drawablePadding="10dp"
            android:background="@drawable/bg_edit_text"
            android:textColorHint="@color/white"
            android:hint="@string/txt_user_id"/>

        <Button
            android:id="@+id/btn_send_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAllCaps="false"
            android:background="@color/white"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/btn_submit"/>
    </LinearLayout>
</LinearLayout>
