<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/activity_login"
              xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/login_bg1"
              android:orientation="vertical"
              tools:context="com.tmfl.activity.LoginActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <ImageView
            android:id="@+id/img_login_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:src="@drawable/ic_back_arrow"/>

        <TextView
            android:id="@+id/txt_login_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/txt_login"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            />

    </android.support.v7.widget.Toolbar>

    <View
        android:layout_width="wrap_content"
        android:layout_height="0.5dp"
        android:background="@color/white"/>

    <ImageView
        android:id="@+id/txt_login_title"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:padding="10dp"
        android:src="@drawable/logo_new"
        android:text="@string/txt_login_title"
        android:textColor="@color/white"
        android:textSize="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/edt_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/bg_edit_text"
            android:drawableLeft="@drawable/ic_user_name"
            android:drawablePadding="10dp"
            android:hint="@string/txt_hint_username"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="15dp"

            />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:background="@drawable/bg_edit_text"
            android:drawableLeft="@drawable/ic_pass"
            android:drawablePadding="10dp"
            android:hint="@string/txt_hint_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="15dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <CheckBox
            android:id="@+id/chkRemember_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:button="@drawable/checkbox_selector"
            android:paddingLeft="10dp"
            android:text="@string/txt_remember_pass"
            android:textColor="@color/white"
            android:visibility="gone"
            />

        <TextView
            android:id="@+id/txt_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/txt_forgot_pass"
            android:textColor="@color/white"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:padding="10dp"
        android:text="@string/txt_login"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"/>
</LinearLayout>
