<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/activity_change_password"
              xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/login_bg1"
              android:orientation="vertical"
              tools:context="com.tmfl.activity.ChangePasswordActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <ImageView
            android:id="@+id/img_change_pass_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:src="@drawable/ic_back_arrow"/>

        <TextView
            android:id="@+id/txt_toolbar_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/txt_change_pass"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            />

        <ImageView
            android:id="@+id/img_drawer_download"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="end"
            android:layout_marginRight="5dp"
            android:src="@drawable/ic_drawer"
            ></ImageView>

    </android.support.v7.widget.Toolbar>

    <View
        android:layout_width="wrap_content"
        android:layout_height="0.5dp"
        android:background="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/txt_change_pass_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_change_pass_header"
            android:textColor="@color/white"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/txt_old_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_edit_text"
            android:drawableLeft="@drawable/ic_pass"
            android:drawablePadding="10dp"
            android:hint="@string/txt_old_password"
            android:inputType="textPassword"
            android:maxLength="120"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textCursorDrawable="@drawable/cursor_color"/>

        <EditText
            android:id="@+id/txt_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_edit_text"
            android:drawableLeft="@drawable/ic_pass"
            android:drawablePadding="10dp"
            android:hint="@string/txt_new_password"
            android:inputType="textPassword"
            android:maxLength="120"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textCursorDrawable="@drawable/cursor_color"/>

        <EditText
            android:id="@+id/txt_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_edit_text"
            android:drawableLeft="@drawable/ic_pass"
            android:drawablePadding="10dp"
            android:hint="@string/txt_confirm_password"
            android:inputType="textPassword"
            android:maxLength="120"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textCursorDrawable="@drawable/cursor_color"/>

        <Button
            android:id="@+id/btn_change_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/btn_change_pass"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"/>
    </LinearLayout>

</LinearLayout>
