<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_banner"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tfml.activity.BannerActivity">

    <include
        android:id="@+id/upper"
        layout="@layout/toolbar_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <View
        android:layout_below="@+id/upper"
        android:layout_above="@+id/frame_banner"
        android:layout_width="wrap_content"
        android:background="#FFFFFF"
        android:layout_height="0.5dp"/>
    <FrameLayout
        android:id="@+id/frame_banner"
        android:layout_marginTop="1dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/llBottom"
        android:layout_below="@+id/upper"
        android:orientation="vertical"
        android:weightSum="3">

        <android.support.v4.view.ViewPager
            android:id="@+id/recentViewpager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2" />


       <com.viewpagerindicator.CirclePageIndicator
            android:id="@+id/titles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="30dp"
            app:fillColor="@color/colorAccent"
            app:pageColor="@android:color/white"
            android:layout_gravity="bottom"
            app:radius="4dp"
            app:strokeColor="@android:color/darker_gray" />

    </FrameLayout>



    <LinearLayout
        android:id="@+id/llBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:background="@color/tab_bg"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/linSchemes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:background="?attr/selectableItemBackground"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <ImageView
                android:id="@+id/imageSchemes"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center"
                android:src="@drawable/ic_scheme_non_selected" />

            <TextView
                android:id="@+id/txtSchemes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/schemes"
                android:textColor="#FFFFFF" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linApplyLoan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/linSchemes"
            android:background="?attr/selectableItemBackground"
            android:layout_weight="1"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgApplyLoan"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_apply_loan_non_selected" />

            <TextView
                android:id="@+id/txtApplyLoan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/apply_loan"
                android:textColor="#FFFFFF"  />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linReferFriend"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/linApplyLoan"
            android:background="?attr/selectableItemBackground"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <ImageView
                android:id="@+id/imgReferFriend"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_refer_friends_non_selected" />

            <TextView
                android:id="@+id/txtReferFriend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/refer_friend"
                android:textColor="#FFFFFF"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linLoanStaus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:background="?attr/selectableItemBackground"
            android:layout_toRightOf="@+id/linReferFriend"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginLeft="2dp">

            <View
                android:id="@+id/viewId"
                android:layout_height="3dp"
                android:layout_width="match_parent"
                android:background="@color/white"
                android:visibility="invisible" />
            <ImageView
                android:id="@+id/imgLoanStatus"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginTop="7dp"
                android:src="@drawable/ic_loan_status_non_selected" />

            <TextView
                android:id="@+id/txtLoanStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/loan_status"
                android:textColor="#FFFFFF"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="?attr/selectableItemBackground"
            android:layout_toRightOf="@+id/linLoanStaus"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="5dp">

            <ImageView
                android:id="@+id/imgLogin"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_login_non_selected" />

            <TextView
                android:id="@+id/txtLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/txt_login"
                android:textColor="#FFFFFF" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
